# jejueo-translator

./: .gitignore  AGENTS.md  CNAME  DEPLOY.md  PLAN.md  README.md  SageMaker-Seq2Seq-Translation-Korean-Jejueo.ipynb  index.html  requirements-dev.txt
.github/workflows/: ci.yml
apps/web/: .dev.vars.example  package.json  wrangler.toml
apps/web/functions/api/: config.js  translate.js
apps/web/public/: app.js  index.html  styles.css
apps/web/src/: translate.js
apps/web/tests/: config.test.js  translate.test.js
docs/: README.md  api-spec.md  architecture.md  data-licensing.md  evaluation-plan.md  implementation-checklist.md  implementation-plan.md  local-eval-notes.md  manual-test-matrix.md  mvp-decision-record.md  open-questions.md  phase-0-checklist.md  risk-register.md
frontend/: index.html  styles.css
services/inference/: .env.example  pyproject.toml
services/inference/scripts/: check_modal_readiness.py  smoke_check.py
services/inference/src/jejueo_inference/: __init__.py  asgi.py  deploy.py  main.py  modal_app.py  runtime.py  service.py  settings.py  translator.py
services/inference/tests/: test_asgi.py  test_deploy.py  test_runtime.py  test_service.py  test_settings.py
